--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -3,11 +3,13 @@
 
 @import "libraries/variables";
 @import "libraries/mixins";
+@import "libraries/modifiers";
 
 @import "templates/scaffolding";
 
 @import "atoms/badges";
 @import "atoms/buttons";
+@import "atoms/colors";
 @import "atoms/close";
 @import "atoms/glyphicons";
 @import "atoms/headings";
@@ -34,6 +36,7 @@
 @import "molecules/panels";
 @import "molecules/popovers";
 @import "molecules/tables";
+@import "molecules/typeface-display";
 @import "molecules/wells";
 
 @import "organisms/modals";
