--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import "molecules/dropdowns";
 @import "molecules/forms";
 @import "molecules/input-group";
+@import "molecules/jumbotron";
 @import "molecules/media";
 @import "molecules/navbar";
 @import "molecules/navs";
