--- a/source/assets/stylesheets/libraries/_variables.scss
+++ b/source/assets/stylesheets/libraries/_variables.scss
@@ -90,10 +90,10 @@ $btn-padding-extra-small:			.125rem .25rem;
 
 
 
-$btn-primary-color:              	$color-black;
+$btn-primary-color:              	$color-brand-tertiary;
 $btn-primary-bg:                 	$color-cta;
 $btn-primary-border:             	$color-cta;
-$btn-primary-color-hover:	     	$color-black;
+$btn-primary-color-hover:	     	$color-brand-tertiary;
 $btn-primary-bg-hover:				$color-cta-hover;
 $btn-primary-border-hover:			$color-cta-hover;
 
